# bingo

./: .gitignore  Cargo.toml  db.sqlite
src/: app_state.rs  config.rs  main.rs
src/model/: database.rs  mod.rs  user.rs
src/model/migrations/: m0001_initialize.rs  migrator.rs  mod.rs
src/routes/: auth_routes.rs  mod.rs
src/routes/handlers/: auth_handlers.rs
src/util/: jwt.rs
