[package]
name = "bingo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
envconfig = "0.11.0"
sea-orm = {version = "1.1.11", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
thiserror = "2.0.12"
tokio = {version = "1.45.0", features = []}
sea-orm-migration = "1.1.11"
async-trait = "0.1.88"
serde = "1.0.219"
serde_derive = "1.0.219"
argon2 = {version = "0.5.3", features = ["std", "password-hash", "alloc"] }
log = "0.4.27"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"